--- a/ciclo1/aula5/site3/imagem.html
+++ b/ciclo1/aula5/site3/imagem.html
@@ -5,7 +5,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 </head>
+<style type="text/css">
+	#img-fruta{
+		border: 1px solid red;
+		width: 300px;
+		height: 300px;
+	}
+
+	img{
+		width: 300px;
+		height: 300px;
+		opacity:  0.8;/* 0 ate 1 */
+	}
+</style>
 <body>
-	<img alt="fruta" src="lemon.jpg">
+	<!--
+		.gif
+		.jpg
+		.png
+	-->
+	<div id="img-fruta">
+		<img title="Imagem de teste" alt="fruta" src="lemon.jpg">
+	</div>
 </body>
 </html>
