--- a/ciclo1/aula5/site3/imagem.html
+++ b/ciclo1/aula5/site3/imagem.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Style+Script&display=swap" rel="stylesheet">
 	<title>Document</title>
 </head>
 <style type="text/css">
@@ -10,12 +14,26 @@
 		border: 1px solid red;
 		width: 300px;
 		height: 300px;
+		opacity:  0.4;/* 0 ate 1 */
 	}
 
 	img{
 		width: 300px;
 		height: 300px;
-		opacity:  0.8;/* 0 ate 1 */
+	}
+
+	.nossa{
+		font-size: 50px;
+		color:  yellow;
+		background-color: black;
+	}
+
+	p{
+		font-family: 'Lato', sans-serif;
+		font-family: 'Style Script', cursive;
+		width: 300px;
+		height: auto;
+		font-size: 24px;
 	}
 </style>
 <body>
@@ -27,5 +45,9 @@
 	<div id="img-fruta">
 		<img title="Imagem de teste" alt="fruta" src="lemon.jpg">
 	</div>
+		<span class="material-icons nossa">settings</span>
+		<p>
+			Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Facilis laudantium, mollitia ut optio. Qui, commodi accusantium perspiciatis. Fuga numquam excepturi sit pariatur iure eaque recusandae, vero? Molestias aut facilis minima?
+		</p>
 </body>
 </html>
