--- a/ciclo1/aula5/desafio/desafio4.html
+++ b/ciclo1/aula5/desafio/desafio4.html
@@ -101,6 +101,7 @@
 	#itensMenus{
 		list-style: none;
 		display: flex;
+		justify-content: center;
 		align-items: center;
 		width: 100%;
 		height: 100%;
@@ -112,7 +113,6 @@
 		margin-top: 2px;
 		width: 120px;
 		height: 100%;
-		
 		box-sizing: border-box;
 
 	}
